# utils-util

./: README.md  ]  install.sh  justfile  pyproject.toml
src/utils/: __init__.py  click.py  cmds.py  dir.py  log.py
vms/: alma.yaml  debian.yaml  fedora.yaml  justfile  rocky.yaml  suse.yaml  ubuntu.yaml
