[project]
name = "utils"
version = "0.1.0"
description = "Utility for managing user scripts and commands"
readme = "README.md"
authors = [{ name = "Annie Ehler", email = "annie.ehler.4@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["rich-click>=1.8.9"]

[project.scripts]
utils = "utils:utils"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
