[project]
name = "utils"
version = "1.0.0"
description = "Utility for managing user scripts and commands"
readme = "README.md"
authors = [{ name = "Annie Ehler", email = "annie.ehler.4@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "distro>=1.9.0",
    "halo>=0.0.31",
    "requests>=2.32.4",
    "rich-click>=1.8.9",
]

[project.scripts]
utils = "utils:utils"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
